--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,143 @@
 .App {
   text-align: center;
+  min-height: 100vh;
 }
 
-.App-header {
+header {
+  background-color: rgb(225, 112, 104);
+  padding: 20px;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.option-btn {
+  display: flex;
+  gap: 10px;
+
+}
+
+.option-btn button {
+  border: none;
+  padding: 10px;
+  width: 100px;
+  border-radius: 5px;
+
+}
+
+.option-btn button:hover{
+  background-color: bisque;
+}
+
+main {
+  margin: 20px;
+  justify-content: center;
+  align-items: center;
+  flex:1;
+}
+
+.search-sort {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-bar {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.search-bar input {
+  width: 50%;
+  background-color: rgb(244, 230, 230);
+  height: 40px;
+  outline: none;
+  border: 1px solid transparent;
+  padding-left: 15px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.search-bar .search-button{
+  border: none;
+  border-radius: 10px;
+  padding: 10px 15px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.search-bar .search-button:hover {
+  background-color: rgb(244, 230, 230);
+}
+
+#choice {
+  border: none;
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.movie-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.movie{
+  background-color: rgb(225, 112, 104);
+  padding: 20px;
+  width: 250px;
+  height: 400px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+
+}
+
+.movie:hover{
+  transform: scale(1.2);
+}
+
+.load-button {
+  margin: 100px;
+  border: none;
+  padding: 10px 15px;
+  background-color: rgb(225, 112, 104);
+  border-radius: 5px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.movie-image{
+  width: 250px;
+  height: 300px;
+}
+
+footer {
+  background-color: rgb(225, 112, 104);
+  color: white;
+  padding: 20px;
+  justify-content: flex-end;
+  margin-bottom: 0px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
+.test {
+  margin-bottom: 100px;
+}
+
+
+
+/* .App-header {
   background-color: #282c34;
   display: flex;
   flex-direction: row;
@@ -25,4 +160,4 @@
   .search-bar form {
     flex-direction: column;
   }
-}
+} */
