--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  height: 100%;
 }
 
-button {
+/* button {
   background-color: #282c34;
   color: white;
   cursor: pointer;
@@ -16,4 +16,4 @@ button {
 button:hover {
   background-color: #777;
   color: white;
-}
+} */
