--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,5 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   height: 100%;
+  background-color: black;
 }
-
-/* button {
-  background-color: #282c34;
-  color: white;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #777;
-  color: white;
-} */
