--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,66 @@
 .App {
   text-align: center;
   min-height: 100vh;
+  /* max-width: 100vw; */
+  /* overflow-x: hidden; */
+  display: flex;
+  flex-direction: column;
 }
 
 header {
+  display: flex;
+  justify-content: space-between;
   background-color: rgb(225, 112, 104);
+  z-index: 3;
   padding: 20px;
   color: white;
+  top: 0;
+  left: 0;
+  position: fixed;
   width: 100%;
   text-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  overflow: hidden;
+}
+
+.title{
+  display: flex;
 }
 
 .option-btn {
   display: flex;
   gap: 10px;
 
-}
-
-.option-btn button {
-  border: none;
-  padding: 10px;
-  width: 100px;
-  border-radius: 5px;
 
 }
 
-.option-btn button:hover{
-  background-color: bisque;
+.option-btn a {
+  /* border: none; */
+  /* padding: 5px; */
+  /* width: 100px;
+  border-radius: 5px; */
+  margin-right: 30px;
+
+}
+
+.option-btn a:hover{
+  color: bisque;
 }
 
 main {
+
   margin: 20px;
   justify-content: center;
   align-items: center;
   flex:1;
+  margin-left: 160px;
+  padding-top: 130px;
 }
 
 .search-sort {
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
+  /* justify-content: space-between; */
 }
 
 .search-bar {
@@ -73,6 +94,7 @@ main {
 }
 
 #choice {
+  height: 40px;
   border: none;
   padding: 10px 15px;
   border-radius: 10px;
@@ -91,6 +113,7 @@ main {
 .movie{
   background-color: rgb(225, 112, 104);
   padding: 20px;
+
   width: 250px;
   height: 400px;
   border-radius: 20px;
@@ -99,7 +122,7 @@ main {
 }
 
 .movie:hover{
-  transform: scale(1.2);
+  transform: scale(0.9);
 }
 
 .load-button {
@@ -113,30 +136,40 @@ main {
 }
 
 .movie-image{
-  width: 250px;
-  height: 300px;
+  width: 150px;
+  height: 200px;
 }
 
 footer {
   background-color: rgb(225, 112, 104);
   color: white;
-  padding: 20px;
+  padding: 5px;
   justify-content: flex-end;
   margin-bottom: 0px;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
-  position: fixed;
+  /* position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
   color: white;
   text-align: center;
 }
 
-.test {
+/* .test {
   margin-bottom: 100px;
+} */
+
+.favorite-watched-icons {
+  display: flex;
+  justify-content: space-between;
 }
 
-@media (max-width: 768px){
+.fa-star{
+  color: gold;
+}
+
+
+/* @media (max-width: 768px){
   .search-bar input {
     width: 80%;
 
@@ -146,7 +179,7 @@ footer {
     width: 45%;
   }
 
-}
+} */
 
 @media (max-width: 480px) {
   header {
