--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  /* max-width: 100vw; */
-  /* overflow-x: hidden; */
   display: flex;
   flex-direction: column;
 }
@@ -10,7 +8,7 @@
 header {
   display: flex;
   justify-content: space-between;
-  background-color: rgb(225, 112, 104);
+  background-color: rgb(92, 12, 92);
   z-index: 3;
   padding: 20px;
   color: white;
@@ -18,8 +16,14 @@ header {
   left: 0;
   position: fixed;
   width: 100%;
-  text-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  text-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+               rgba(0, 0, 0, 0.09) 0px 4px 2px,
+               rgba(0, 0, 0, 0.09) 0px 8px 4px,
+               rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
   overflow: hidden;
 }
 
@@ -30,17 +34,10 @@ header {
 .option-btn {
   display: flex;
   gap: 10px;
-
-
 }
 
 .option-btn a {
-  /* border: none; */
-  /* padding: 5px; */
-  /* width: 100px;
-  border-radius: 5px; */
   margin-right: 30px;
-
 }
 
 .option-btn a:hover{
@@ -48,19 +45,16 @@ header {
 }
 
 main {
-
   margin: 20px;
   justify-content: center;
   align-items: center;
   flex:1;
-  margin-left: 160px;
   padding-top: 130px;
 }
 
 .search-sort {
   display: flex;
   gap: 10px;
-  /* justify-content: space-between; */
 }
 
 .search-bar {
@@ -79,14 +73,20 @@ main {
   border: 1px solid transparent;
   padding-left: 15px;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
 }
 
 .search-bar .search-button{
   border: none;
   border-radius: 10px;
   padding: 10px 15px;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
 }
 
 .search-bar .search-button:hover {
@@ -98,7 +98,10 @@ main {
   border: none;
   padding: 10px 15px;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
 }
 
 .movie-cards {
@@ -111,14 +114,15 @@ main {
 }
 
 .movie{
-  background-color: rgb(225, 112, 104);
+  background-color: rgb(174, 162, 174);
   padding: 20px;
-
   width: 250px;
   height: 400px;
   border-radius: 20px;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
-
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
 }
 
 .movie:hover{
@@ -129,10 +133,18 @@ main {
   margin: 100px;
   border: none;
   padding: 10px 15px;
-  background-color: rgb(225, 112, 104);
+  background-color: rgb(92, 12, 92);
   border-radius: 5px;
   color: white;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.load-button:hover{
+  background-color: rgb(174, 162, 174);
+  transform: scale(1.2);
 }
 
 .movie-image{
@@ -141,23 +153,21 @@ main {
 }
 
 footer {
-  background-color: rgb(225, 112, 104);
+  background-color: rgb(92, 12, 92);
   color: white;
   padding: 5px;
   justify-content: flex-end;
   margin-bottom: 0px;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
-  /* position: fixed;
-  left: 0;
-  bottom: 0; */
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+              rgba(0, 0, 0, 0.09) 0px 4px 2px,
+              rgba(0, 0, 0, 0.09) 0px 8px 4px,
+              rgba(0, 0, 0, 0.09) 0px 16px 8px;
   width: 100%;
   color: white;
   text-align: center;
 }
 
-/* .test {
-  margin-bottom: 100px;
-} */
+
 
 .favorite-watched-icons {
   display: flex;
@@ -169,22 +179,12 @@ footer {
 }
 
 
-/* @media (max-width: 768px){
-  .search-bar input {
-    width: 80%;
-
-  }
-
-  .movie {
-    width: 45%;
-  }
-
-} */
 
 @media (max-width: 480px) {
   header {
-    /* width: 100%; */
     padding: 15px;
+    display: flex;
+    flex-direction: column;
   }
 
   .option-btn button {
