--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,7 +1,4 @@
 .modal-overlay {
-
-    /* display: hidden; */
-    /* display: block; */
     position: fixed;
     z-index: 1;
     left: 0;
@@ -10,44 +7,45 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
-
 }
 
 .modal-image{
     height: 200px;
     width: 250px;
+
 }
 
-
-
 .modal-content {
-    background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
+    color: #fff;
     width: 50%;
     border-radius: 10px;
 }
 
 .modal-close-button{
-    background-color: rgb(225, 112, 104);
+    background-color: rgb(92, 12, 92);
     color: white;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+                rgba(0, 0, 0, 0.09) 0px 4px 2px,
+                rgba(0, 0, 0, 0.09) 0px 8px 4px,
+                rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
 
+.modal-close-button:hover {
+    background-color: rgb(174, 162, 174);
+    transform: scale(1.2);
 
 }
 
 @media (max-width: 768px){
-
-
     .modal-content {
       width: 80%;
     }
-
-
 }
 
 
