--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,19 +1,12 @@
 .sidebar {
     height: 100%;
-    /* width: 160px; */
     position: fixed;
-    /* z-index: -1; */
     top: 100px;
     left: 0;
     height: calc(100% - 80px);
-    background-color: white;
-    /* overflow-x: hidden; */
+    background-color: rgb(92, 12, 92);
+    color: white;
     overflow-y: auto;
     padding-top: 20px;
     padding: 15px;
-
-}
-
-.sidebar h5{
-    /* margin-top: 150px; */
 }
