--- a/src/WatchedAndFavMovie.css
+++ b/src/WatchedAndFavMovie.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
-    background-color:bisque;
+    background-color:rgb(174, 162, 174);
     margin-bottom: 10px;
     border-radius: 5px;
     padding: 10px;
