--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@ body {
   padding: 0;
   width: 100%;
   font-family: Arial, sans-serif;
+  color: rgb(95, 90, 90);
   height: 100%;
   box-sizing: border-box;
-  background-color: black;
+  background-color: #F4F4F9;
 }
 
 *,
