--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 
 header {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   background-color: rgb(92, 12, 92);
   z-index: 3;
@@ -29,6 +31,8 @@ header {
 
 .title{
   display: flex;
+  align-items: center;
+  gap: 20px
 }
 
 .option-btn {
@@ -54,7 +58,22 @@ main {
 
 .search-sort {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
+  flex: 1;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.search-sort button {
+  padding: 10px;
+  width: 150px;
+  border-radius: 10px;
+  border: none;
+}
+
+.search-sort button:hover {
+  background-color: rgb(202, 163, 202);
 }
 
 .search-bar {
@@ -185,6 +204,15 @@ footer {
     padding: 15px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search-sort {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .option-btn button {
