--- a/src/App.css
+++ b/src/App.css
@@ -172,10 +172,11 @@ main {
 }
 
 footer {
+  display: flex;
   background-color: rgb(92, 12, 92);
   color: white;
   padding: 5px;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   margin-bottom: 0px;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
               rgba(0, 0, 0, 0.09) 0px 4px 2px,
